--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         comment: form.comment.value
       };
 
-      fetch("https://script.google.com/macros/s/ТУТ_ТВОЄ_WEBAPP_URL/exec", {
+      fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbwyt5DdOkrg3lhUGHXbGcScwRTJWWUvXo79qcjdTtK1I8SmER94ChT42X_h-z5OYAtEtg/exec/exec", {
         method: "POST",
         body: JSON.stringify(data),
         headers: { "Content-Type": "application/json" }
