--- a/index.html
+++ b/index.html
@@ -2,83 +2,121 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Форма заявки</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Запит на забезпечення</title>
   <style>
-    body { font-family: sans-serif; background: #f4f4f4; padding: 20px; }
-    h2 { text-align: center; }
-    form { background: #fff; padding: 20px; border-radius: 8px; max-width: 500px; margin: 0 auto; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-    label { display: block; margin-top: 10px; font-weight: bold; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f4;
+      padding: 20px;
+      color: #333;
+    }
+    .form-container {
+      background: #fff;
+      max-width: 500px;
+      margin: auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: 500;
+    }
     input, select, textarea {
-      width: 100%; padding: 8px; margin-top: 4px; border: 1px solid #ccc; border-radius: 4px;
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 15px;
     }
     button {
-      margin-top: 20px; padding: 10px 20px; background: #28a745; color: #fff;
-      border: none; border-radius: 4px; cursor: pointer; font-weight: bold;
+      width: 100%;
+      padding: 12px;
+      margin-top: 25px;
+      background-color: #4caf50;
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
     }
-    button:hover { background: #218838; }
+    button:hover {
+      background-color: #45a045;
+    }
+    .success {
+      text-align: center;
+      margin-top: 20px;
+      font-weight: 600;
+      color: green;
+    }
   </style>
 </head>
 <body>
-  <h2>Заявка на оновлення залишків</h2>
-  <form id="requestForm">
-    <label>ПІБ</label>
-    <input type="text" name="name" required>
+  <div class="form-container">
+    <h2>📦 Запит на забезпечення</h2>
+    <form id="requestForm">
+      <label>👤 ПІБ</label>
+      <input type="text" name="name" required />
 
-    <label>Підрозділ</label>
-    <select name="department" required>
-      <option value="">Оберіть...</option>
-      <option>Офіс</option>
-      <option>Склад</option>
-      <option>Львів</option>
-      <option>Виробництво</option>
-    </select>
+      <label>🏢 Відділ</label>
+      <select name="department" required>
+        <option value="Офіс">Офіс</option>
+        <option value="Склад">Склад</option>
+        <option value="Львів">Львів</option>
+        <option value="Виробництво">Виробництво</option>
+      </select>
 
-    <label>Категорія</label>
-    <select name="category" required>
-      <option value="">Оберіть...</option>
-      <option>Канцтовари</option>
-      <option>Пакувальні матеріали</option>
-      <option>Господарчі засоби</option>
-      <option>Продукти загального користування</option>
-    </select>
+      <label>📂 Категорія</label>
+      <input type="text" name="category" required />
 
-    <label>Назва товару</label>
-    <input type="text" name="item" required>
+      <label>📌 Назва товару</label>
+      <input type="text" name="item" required />
 
-    <label>Кількість</label>
-    <input type="number" name="quantity" required min="0">
+      <label>🔢 Кількість</label>
+      <input type="number" name="quantity" min="1" required />
 
-    <label>Коментар</label>
-    <textarea name="comment" rows="3"></textarea>
+      <label>📝 Тип заявки</label>
+      <select name="type" required>
+        <option value="Видача">Видача</option>
+        <option value="Надходження">Надходження</option>
+      </select>
 
-    <button type="submit">Відправити</button>
-  </form>
+      <label>💬 Коментар</label>
+      <textarea name="comment" rows="2"></textarea>
+
+      <button type="submit">📨 Надіслати запит</button>
+      <div class="success" id="successMessage"></div>
+    </form>
+  </div>
 
   <script>
-    document.getElementById("requestForm").addEventListener("submit", function(e) {
+    const form = document.getElementById("requestForm");
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const form = e.target;
-      const data = {
-        name: form.name.value,
-        department: form.department.value,
-        category: form.category.value,
-        item: form.item.value,
-        quantity: form.quantity.value,
-        comment: form.comment.value
-      };
+      const formData = new FormData(form);
+      const data = Object.fromEntries(formData);
 
-      fetch("https://script.google.com/macros/s/AKfycbwyt5DdOkrg3lhUGHXbGcScwRTJWWUvXo79qcjdTtK1I8SmER94ChT42X_h-z5OYAtEtg/exec", {
-        method: "POST",
-        body: JSON.stringify(data),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => res.text())
-      .then(msg => {
-        alert(msg);
-        form.reset();
-      })
-      .catch(() => alert("Помилка при відправці."));
+      const response = await fetch(
+        "https://script.google.com/macros/s/AKfycbwyt5DdOkrg3lhUGHXbGcScwRTJWWUvXo79qcjdTtK1I8SmER94ChT42X_h-z5OYAtEtg/exec",
+        {
+          method: "POST",
+          body: JSON.stringify(data),
+          headers: {
+            "Content-Type": "application/json",
+          },
+        }
+      );
+
+      const text = await response.text();
+      document.getElementById("successMessage").innerText = text;
+      form.reset();
     });
   </script>
 </body>
