--- a/index.html
+++ b/index.html
@@ -3,121 +3,71 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Запит на забезпечення</title>
+  <title>Система забезпечення</title>
   <style>
     body {
+      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f4f4;
-      padding: 20px;
-      color: #333;
+      background: #111;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
-    .form-container {
-      background: #fff;
-      max-width: 500px;
-      margin: auto;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    h1 {
+      font-size: 28px;
+      margin-bottom: 30px;
     }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: 500;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 15px;
+    .button-container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      width: 90%;
+      max-width: 400px;
     }
     button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 25px;
-      background-color: #4caf50;
-      border: none;
-      color: white;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a045;
-    }
-    .success {
-      text-align: center;
-      margin-top: 20px;
+      padding: 18px;
+      font-size: 18px;
       font-weight: 600;
-      color: green;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.3s;
+    }
+    .request {
+      background-color: #007BFF;
+      color: white;
+    }
+    .request:hover {
+      background-color: #0060c0;
+    }
+    .inventory {
+      background-color: #28a745;
+      color: white;
+    }
+    .inventory:hover {
+      background-color: #1e7e34;
+    }
+    .icon {
+      margin-right: 10px;
+      font-size: 22px;
     }
   </style>
 </head>
 <body>
-  <div class="form-container">
-    <h2>📦 Запит на забезпечення</h2>
-    <form id="requestForm">
-      <label>👤 ПІБ</label>
-      <input type="text" name="name" required />
-
-      <label>🏢 Відділ</label>
-      <select name="department" required>
-        <option value="Офіс">Офіс</option>
-        <option value="Склад">Склад</option>
-        <option value="Львів">Львів</option>
-        <option value="Виробництво">Виробництво</option>
-      </select>
-
-      <label>📂 Категорія</label>
-      <input type="text" name="category" required />
-
-      <label>📌 Назва товару</label>
-      <input type="text" name="item" required />
-
-      <label>🔢 Кількість</label>
-      <input type="number" name="quantity" min="1" required />
-
-      <label>📝 Тип заявки</label>
-      <select name="type" required>
-        <option value="Видача">Видача</option>
-        <option value="Надходження">Надходження</option>
-      </select>
-
-      <label>💬 Коментар</label>
-      <textarea name="comment" rows="2"></textarea>
-
-      <button type="submit">📨 Надіслати запит</button>
-      <div class="success" id="successMessage"></div>
-    </form>
+  <h1>📦 Система забезпечення</h1>
+  <div class="button-container">
+    <button class="request" onclick="window.location.href='request.html'">
+      <span class="icon">📝</span> Запит на забезпечення
+    </button>
+    <button class="inventory" onclick="window.location.href='inventory.html'">
+      <span class="icon">📋</span> Інвентаризація
+    </button>
   </div>
-
-  <script>
-    const form = document.getElementById("requestForm");
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const formData = new FormData(form);
-      const data = Object.fromEntries(formData);
-
-      const response = await fetch(
-        "https://script.google.com/macros/s/AKfycbxAS6Fvq933AyF4DYRORnJKlElfiBKebALK8ploQdW22BVKj8oFZJkfsH2mQR_XwJEeLw/exec",
-        {
-          method: "POST",
-          body: JSON.stringify(data),
-          headers: {
-            "Content-Type": "application/json",
-          },
-        }
-      );
-
-      const text = await response.text();
-      document.getElementById("successMessage").innerText = text;
-      form.reset();
-    });
-  </script>
 </body>
 </html>
