--- a/request.html
+++ b/request.html
@@ -1,4 +1,5 @@
-<!-- request.html -->
+
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -7,96 +8,143 @@
   <title>Запит на забезпечення</title>
   <style>
     body {
-      background: #f4f4f4;
+      background: #121212;
+      color: #fff;
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 30px 20px;
     }
-    .container {
-      background: #fff;
-      max-width: 500px;
-      margin: 0 auto;
+    .form-card {
+      background: #1e1e1e;
       padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border-radius: 20px;
+      max-width: 600px;
+      margin: auto;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
     }
-    h2 {
+    h1 {
       text-align: center;
-      margin-bottom: 25px;
+      margin-bottom: 30px;
+      font-size: 24px;
     }
-    label {
-      display: block;
-      margin-top: 10px;
-      font-weight: 600;
+    .form-row {
+      display: flex;
+      gap: 10px;
+    }
+    .form-group {
+      margin-bottom: 20px;
+      display: flex;
+      flex-direction: column;
+      flex: 1;
     }
     input, select, textarea {
-      width: 100%;
       padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      margin-top: 20px;
-      width: 100%;
-      background: #28a745;
-      color: #fff;
-      padding: 12px;
-      border: none;
       border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
+      border: none;
+      outline: none;
+      font-size: 14px;
     }
-    button:hover {
-      background: #218838;
+    .submit-btn {
+      width: 100%;
+      padding: 14px;
+      border-radius: 10px;
+      background: linear-gradient(135deg, #28a745, #218838);
+      border: none;
+      font-size: 16px;
+      font-weight: 600;
+      color: white;
+      cursor: pointer;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>🚚 Запит на забезпечення</h2>
-    <form id="requestForm">
-      <label>👤 ПІБ</label>
-      <input name="name" required />
-      <label>📅 Відділ</label>
-      <select name="department" required>
-        <option>Офіс</option>
-        <option>Склад</option>
-        <option>Львів</option>
-        <option>Виробництво</option>
-      </select>
-      <label>📆 Категорія</label>
-      <input name="category" required />
-      <label>🔨 Назва товару</label>
-      <input name="product" required />
-      <label>📊 Кількість</label>
-      <input name="qty" type="number" required />
-      <label>📃 Тип заявки</label>
-      <select name="type" required>
-        <option>Надходження</option>
-        <option>Видача</option>
-      </select>
-      <label>💬 Коментар</label>
-      <textarea name="comment"></textarea>
-      <button type="submit">📤 Надіслати запит</button>
+  <div class="form-card">
+    <h1>🚚 Запит на забезпечення</h1>
+    <form>
+      <div class="form-row">
+        <div class="form-group">
+          <label>Прізвище</label>
+          <input type="text" placeholder="Іванов" required>
+        </div>
+        <div class="form-group">
+          <label>Імʼя</label>
+          <input type="text" placeholder="Іван" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Відділ</label>
+        <select>
+          <option>Офіс</option>
+          <option>Склад</option>
+          <option>Львів</option>
+          <option>Виробництво</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Категорія</label>
+        <select id="categorySelect" required>
+          <option value="">Оберіть категорію</option>
+          <option>Канцтовари</option>
+          <option>Господарчі засоби</option>
+          <option>Продукти загального користування</option>
+          <option>Пакувальні матеріали</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Назва товару</label>
+        <input list="productList" id="productInput" placeholder="Наприклад: Папір А4" required>
+        <datalist id="productList"></datalist>
+      </div>
+      <div class="form-group">
+        <label>Кількість</label>
+        <input type="number" min="1" required>
+      </div>
+      <div class="form-group">
+        <label>Тип заявки</label>
+        <select>
+          <option>Надходження</option>
+          <option>Видача</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Коментар</label>
+        <textarea rows="3" placeholder="Необов’язково"></textarea>
+      </div>
+      <button class="submit-btn" type="submit">📬 Надіслати запит</button>
     </form>
   </div>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwyt5DdOkrg3lhUGHXbGcScwRTJWWUvXo79qcjdTtK1I8SmER94ChT42X_h-z5OYAtEtg/exec';
-    const form = document.getElementById('requestForm');
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(form).entries());
-      fetch(scriptURL, {
-        method: 'POST',
-        body: JSON.stringify(data),
-        headers: { 'Content-Type': 'application/json' },
-        mode: 'no-cors'
-      });
-      form.reset();
-      alert('Спасибі! Запит надіслано.');
+    const apiKey = "AIzaSyB2l87TIEyJwO1BMDkE_IHMaXG6k2N3rEw";
+    const sheetId = "1_Lr6Sv2IdC6M2-Dc7lpE7SgvXVkEeaFaV3axMSI-bfA";
+    const sheetName = "Склад забезпечення";
+    const categorySelect = document.getElementById("categorySelect");
+    const productList = document.getElementById("productList");
+
+    let productsByCategory = {};
+
+    async function loadProducts() {
+      const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}!A2:B1000?key=${apiKey}`;
+      const res = await fetch(url);
+      const data = await res.json();
+      const values = data.values || [];
+
+      for (const [category, name] of values) {
+        if (!productsByCategory[category]) {
+          productsByCategory[category] = [];
+        }
+        productsByCategory[category].push(name);
+      }
+    }
+
+    categorySelect.addEventListener("change", () => {
+      const selected = categorySelect.value;
+      const items = productsByCategory[selected] || [];
+      productList.innerHTML = items.map(name => `<option value="${name}">`).join("");
     });
+
+    loadProducts();
   </script>
 </body>
 </html>
