--- a/index.html
+++ b/index.html
@@ -1,59 +1,74 @@
-
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Вибір дії</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kanban — Вибір дії</title>
   <style>
     body {
-      background: #121212;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0f0f0f;
+      color: #fff;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
     }
-    .card {
-      background: #1e1e1e;
-      padding: 40px;
+
+    .box {
+      background-color: #1c1c1c;
       border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+      padding: 40px 30px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
       text-align: center;
       width: 90%;
-      max-width: 400px;
+      max-width: 350px;
     }
-    h1 {
-      margin-bottom: 30px;
+
+    .box h1 {
       font-size: 24px;
+      margin-bottom: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
     }
-    .btn {
+
+    .action-btn {
       display: block;
-      margin: 15px 0;
+      width: 100%;
+      margin: 10px 0;
       padding: 14px;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       font-size: 16px;
-      font-weight: 600;
-      color: white;
+      font-weight: bold;
       cursor: pointer;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
-    .btn-green {
-      background: linear-gradient(135deg, #28a745, #218838);
+
+    .action-btn:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0 12px rgba(255,255,255,0.2);
     }
-    .btn-blue {
-      background: linear-gradient(135deg, #007bff, #0056b3);
+
+    .green {
+      background: linear-gradient(90deg, #4caf50, #66bb6a);
+      color: white;
+    }
+
+    .blue {
+      background: linear-gradient(90deg, #2196f3, #42a5f5);
+      color: white;
     }
   </style>
 </head>
 <body>
-  <div class="card">
+  <div class="box">
     <h1>🚚 Виберіть дію</h1>
-    <a href="request.html"><button class="btn btn-green">📄 Запит на забезпечення</button></a>
-    <a href="inventory.html"><button class="btn btn-blue">📊 Інвентаризація</button></a>
+    <button class="action-btn green" onclick="location.href='zapyt.html'">📄 Запит на забезпечення</button>
+    <button class="action-btn blue" onclick="location.href='inventar.html'">📊 Інвентаризація</button>
   </div>
 </body>
 </html>
