--- a/index.html
+++ b/index.html
@@ -3,72 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kanban — Вибір дії</title>
+  <title>Вибір дії</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
       background-color: #0f0f0f;
-      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       height: 100vh;
+      margin: 0;
     }
-
     .box {
-      background-color: #1c1c1c;
+      background: #1c1c1c;
+      padding: 40px;
       border-radius: 20px;
-      padding: 40px 30px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
       text-align: center;
-      width: 90%;
-      max-width: 350px;
     }
-
-    .box h1 {
-      font-size: 24px;
-      margin-bottom: 30px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .action-btn {
+    .btn {
       display: block;
-      width: 100%;
       margin: 10px 0;
-      padding: 14px;
-      border: none;
-      border-radius: 12px;
+      padding: 14px 20px;
       font-size: 16px;
       font-weight: bold;
+      border-radius: 12px;
+      border: none;
       cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .action-btn:hover {
-      transform: scale(1.03);
-      box-shadow: 0 0 12px rgba(255,255,255,0.2);
-    }
-
-    .green {
-      background: linear-gradient(90deg, #4caf50, #66bb6a);
+      transition: 0.2s ease;
       color: white;
     }
-
-    .blue {
-      background: linear-gradient(90deg, #2196f3, #42a5f5);
-      color: white;
-    }
+    .green { background: linear-gradient(90deg, #4caf50, #66bb6a); }
+    .blue { background: linear-gradient(90deg, #2196f3, #42a5f5); }
+    .btn:hover { transform: scale(1.05); }
   </style>
 </head>
 <body>
   <div class="box">
     <h1>🚚 Виберіть дію</h1>
-    <button class="action-btn green" onclick="location.href='zapyt.html'">📄 Запит на забезпечення</button>
-    <button class="action-btn blue" onclick="location.href='inventar.html'">📊 Інвентаризація</button>
+    <button class="btn green" onclick="location.href='request.html'">📄 Запит на забезпечення</button>
+    <button class="btn blue" onclick="location.href='inventory.html'">📊 Інвентаризація</button>
   </div>
 </body>
 </html>
