--- a/request.html
+++ b/request.html
@@ -113,7 +113,8 @@
     </select>
 
     <label for="itemName">Назва товару</label>
-    <input type="text" id="itemName" placeholder="Папір А4" required>
+    <input type="text" id="itemName" placeholder="Папір А4" required list="itemNameList">
+    <datalist id="itemNameList"></datalist>
 
     <label for="quantity">Кількість</label>
     <input type="number" id="quantity" min="1" placeholder="Наприклад, 5" required>
@@ -125,6 +126,7 @@
   </form>
 
   <script>
+    // Відправка форми
     function handleSubmit(e) {
       e.preventDefault();
       const data = {
@@ -145,6 +147,39 @@
       .then(res => res.ok ? alert("Запит надіслано!") : alert("Помилка при надсиланні"))
       .catch(() => alert("Помилка підключення"));
     }
+
+    // Автозаповнення назв товарів по категорії
+    const sheetId = '1_Lr6Sv2IdC6M2-Dc7lpE7SgvXVkEeaFaV3axMSI-bfA';
+    const sheetName = 'Склад забезпечення';
+    const apiKey = 'AIzaSyB2l87TIEyJwO1BMDkE_IHMaXG6k2N3rEw';
+
+    const categorySelect = document.getElementById('category');
+    const itemNameInput = document.getElementById('itemName');
+
+    let productsByCategory = {};
+
+    async function fetchProducts() {
+      const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}!A2:B1000?key=${apiKey}`;
+      const res = await fetch(url);
+      const data = await res.json();
+      
+      data.values.forEach(([category, name]) => {
+        if (!productsByCategory[category]) {
+          productsByCategory[category] = [];
+        }
+        productsByCategory[category].push(name);
+      });
+    }
+
+    categorySelect.addEventListener('change', () => {
+      const selected = categorySelect.value;
+      const list = productsByCategory[selected] || [];
+
+      const datalist = document.getElementById('itemNameList');
+      datalist.innerHTML = list.map(name => `<option value="${name}">`).join('');
+    });
+
+    fetchProducts();
   </script>
 </body>
 </html>
