--- a/request.html
+++ b/request.html
@@ -97,10 +97,10 @@
     <label for="department">Відділ</label>
     <select id="department" required>
       <option value="">Оберіть відділ</option>
-      <option>ОФІС</option>
-      <option>ЛЬВІВ</option>
-      <option>СКЛАД</option>
-      <option>ВИРОБНИЦТВО</option>
+      <option>Офіс</option>
+      <option>Львів</option>
+      <option>Склад</option>
+      <option>Виробництво</option>
     </select>
 
     <label for="category">Категорія</label>
