--- a/request.html
+++ b/request.html
@@ -47,11 +47,26 @@
       color: #fff;
       font-size: 14px;
       box-sizing: border-box;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      background-image: url('data:image/svg+xml;utf8,<svg fill="white" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+      background-repeat: no-repeat;
+      background-position: right 12px center;
+      background-size: 16px;
+      padding-right: 40px;
     }
 
     input::placeholder,
     textarea::placeholder {
       color: #bbb;
+    }
+
+    select:focus,
+    input:focus,
+    textarea:focus {
+      outline: 2px solid #4caf50;
+      background-color: #333;
     }
 
     textarea {
@@ -86,7 +101,7 @@
 </head>
 <body>
   <form class="form-box" onsubmit="handleSubmit(event)">
-    <h2>📄 Запит на забезпечення</h2>
+    <h2>📦 Запит на забезпечення</h2>
 
     <label for="lastName">Прізвище</label>
     <input type="text" id="lastName" placeholder="Іванов" required>
@@ -145,8 +160,8 @@
         body: JSON.stringify(data),
         headers: { "Content-Type": "application/json" }
       })
-      .then(res => res.ok ? alert("Запит надіслано!") : alert("Помилка при надсиланні"))
-      .catch(() => alert("Помилка підключення"));
+      .then(res => res.ok ? alert("✅ Запит надіслано!") : alert("❌ Помилка при надсиланні"))
+      .catch(() => alert("❌ Помилка підключення"));
     }
 
     // Автопідтягування товарів по категорії
